# hiveprint

./: .gitignore  README.md  go.mod  go.sum  main.go  package-lock.json  package.json  tailwind.config.js
backend/: .env  .gitignore  Cargo.toml  Makefile  build.rs  go.mod  go.sum  main.go
backend/controllers/: creator.go  storages.go
backend/migrations/2024-04-21-181515_create_storages/: up.sql
backend/migrations/2024-04-27-171714_create_storage/: up.sql
backend/migrations/2024-04-27-210320_create_storage/: down.sql  up.sql
backend/migrations/2024-04-28-092140_create_storage/: up.sql
backend/model/proto/: printer.pb.go  printer.pb.gorm.go
backend/models/: setup.go
backend/models/proto/: auth.pb.go  auth.pb.gorm.go  creator.pb.go  creator.pb.gorm.go  form.pb.go  physical.pb.go  physical.pb.gorm.go  storage.pb.go  storage.pb.gorm.go
backend/models/protos/: config.pb.go  config.pb.gorm.go  models.pb.go  models.pb.gorm.go  tag.pb.go
backend/models/protos/storage/: storage.pb.go
backend/src/: lib.rs  main.rs  schema.rs
backend/src/controller/: mod.rs  storage.rs
backend/src/models/: storage.rs
backend/src/models/flatbuffers/: storage_generated.rs
backend/src/ws/: handler.rs
db/: dev.sqlite
docker/: docker-compose.yml
flatbuffers/: storage.fbs
frontend/: .gitignore  app.vue  eslint.config.mjs  generate-proto.sh  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend-nuxt/: app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend-vue/: README.md  package-lock.json  package.json
protobuffers/: Makefile  auth.proto  config.proto  creator.proto  form.proto  models.proto  (+5 more)
(+94 files in other folders)
