[package]
name = "hiveprint"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
hyper = "1.2"
bb8 = "0.8"
diesel = { version = "2", features = ["postgres", "postgres_backend", "ipnet-address"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
ipnet = "2.9"
prost = "0.12"
prost-types = "0.12"
bytes = "1.6"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }

[build-dependencies]
prost-build = { version = "0.12" }
